# VeilleAI

./: .gitignore  .pylintrc  AGENTS_GUIDE.md  ARCHITECTURE_REFACTOR.md  CHROMADB_INTEGRATION_SUMMARY.md  COLLECTOR_IMPLEMENTATION.md  CONFIG_VALIDATION_SUMMARY.md  CONTRIBUTING.md  QUICK_REFERENCE.md  README.md  README_RUNNABLE_AGENTS.md  SEEING_AGENTS_IN_ACTION.md  START_HERE.md  config.yaml  patch_rss.py  print_keys.py  pyproject.toml  requirements.txt  run_full_pipeline.py  run_pipeline_stored.py  scheduler_agent.py  streamlit_app.py  style.css  test_compare.py  test_feedparser.py  test_pipeline_local.py  test_synthesizer.py  test_weight.py  update_rss.py
chroma_db/a8120ab2-cb3a-4cb9-adf1-a0c54880a3c3/: index_metadata.pickle
docs/: CONFIG_VALIDATION.md
tests/: test_collector.py
watcher/: compat_sgmllib.py  config.py  config_validator.py  exceptions.py  scheduler.py
watcher/agents/: analysis.py  collector.py  entity_extractor.py  filter.py  filter_agent.py  langchain_orchestrator.py  llm_api_adapter.py  podcast_agent.py  rag_agent.py  synthesizer.py
watcher/collectors/: rss.py
watcher/nlp/: embeddings.py
watcher/storage/: store.py  vector_store.py
watcher/utils/: doc_processor.py
