[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veilleai"
version = "1.0.0"
description = "Autonomous AI-powered intelligence gathering and tech-watch pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ayoub ARFAOUI", email = "ayoub.arfaoui@example.com"},
    {name = "Amine JARBOUI", email = "amine.jarboui@example.com"},
]
keywords = ["ai", "veille", "intelligence-gathering", "news-aggregation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "feedparser>=6.0.11",
    "PyYAML>=6.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "sqlite-utils>=3.32",
    "apscheduler>=3.10",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.3.28",
    "transformers>=4.40.0",
    "accelerate>=0.22.0",
    "torch>=2.2.0; platform_system != 'Darwin'",
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-core>=0.1.0",
    "streamlit>=1.20",
    "reportlab>=4.0",
    "python-docx>=0.8.11",
    "markdown-pdf==1.13.1",
    "Markdown2docx==0.1.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.12",
    "pylint>=2.17",
    "mypy>=1.0",
    "flake8>=6.0",
    "pre-commit>=3.0",
]

[tool.setuptools]
packages = ["watcher"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
skip_glob = ["*/migrations/*"]

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",  # Bad whitespace
    "C0103",           # Invalid name
    "R0913",           # Too many arguments
    "R0914",           # Too many local variables
    "W0212",           # Protected access
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "network: Tests requiring network access",
]

[tool.coverage.run]
branch = true
source = ["watcher"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
skip_empty = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
